Add new endpoint reduce network calls
Add endpoint to reduce making separate network calls for creating
uploads and getting presigned urls to just one call.
